Center align review carousel inner and set max-width for improved layout

--- a/blocks/slide-image/style.css
+++ b/blocks/slide-image/style.css
@@ -26,6 +26,9 @@
 	cursor: grab;
 	user-select: none;
 	width: 100%;
+	max-width: 1440px;
+	margin-left: auto;
+	margin-right: auto;
 }
 
 .review-carousel-inner.dragging {
