style: Adjust carousel padding and arrow positioning for improved layout and responsiveness

--- a/blocks/image-carousel/style.css
+++ b/blocks/image-carousel/style.css
@@ -4,8 +4,10 @@
 .ic-carousel {
 	position: relative;
 	width: 100%;
+	max-width: 1440px;
+	margin: 0 auto;
 	overflow: visible;
-	padding: 0 52px;
+	padding: 0;
 	box-sizing: border-box;
 	user-select: none;
 	-webkit-user-select: none;
@@ -108,11 +110,11 @@
 }
 
 .ic-arrow-prev {
-	left: 0;
+	left: -52px;
 }
 
 .ic-arrow-next {
-	right: 0;
+	right: -52px;
 }
 
 .ic-arrow svg {
@@ -190,9 +192,6 @@
 
 /* Mobile: always 1 slide */
 @media ( max-width: 600px ) {
-	.ic-carousel {
-		padding: 0 38px;
-	}
 	.ic-slide {
 		flex: 0 0 100%;
 	}
@@ -202,8 +201,8 @@
 	.ic-arrow {
 		--ic-arrow-size: 34px;
 	}
-	.ic-arrow-prev { left: 0; }
-	.ic-arrow-next { right: 0; }
+	.ic-arrow-prev { left: -6px; }
+	.ic-arrow-next { right: -6px; }
 
 	.ic-slide-inner img {
 		height: clamp(200px, 60vw, var(--ic-height, 400px));
