--- a/blocks/faq-dropdown/style.css
+++ b/blocks/faq-dropdown/style.css
@@ -78,7 +78,7 @@
 }
 
 .frost-child-faq-dropdown__answer {
-	font-size: clamp(17px, 1.8vw, 29px);
+	font-size: 16px;
 	line-height: 1.35;
 	max-width: 36ch;
 	padding: 2px 0 0 24px;
@@ -101,7 +101,7 @@
 	}
 
 	.frost-child-faq-dropdown__answer {
-		font-size: clamp(17px, 3.7vw, 22px);
+		font-size: 16px;
 		max-width: 100%;
 		padding-left: 18px;
 	}
